# aidaemon

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  PLAN_EVENT_SOURCING.md  README.md  build.bat  config.toml.example  create_sh_ch_posts.py  greeting  greeting.rs  install.sh  linkedin_jobs.html  posts.json  submolts.json  submolts_current.json  test_models.py
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
docs/superpowers/plans/: 2026-03-10-reflection-feedback-loop.md
docs/superpowers/specs/: 2026-03-10-reflection-feedback-loop-design.md
projects/lawyer-site/: package-lock.json  package.json
projects/lawyer-site/src/: App.jsx  index.css
projects/lawyer-site/src/components/: About.jsx  Contact.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  Services.jsx
projects/soccer-balls/: script.js  style.css
sh-vs-ch-pronunciation-guide/: index.json
skills/: job-search.md  system-admin.md  test-skill.md  twitter-api.md  web-browsing.md
src/: agent.rs  agent_handoff.rs  biometric.rs  cli_agent_flags.rs  config.rs  conversation.rs  core.rs  cron_utils.rs  daemon.rs  dashboard.html  dashboard.rs  execution_policy.rs  goal_tokens.rs  heartbeat.rs  integration_tests.rs  lib.rs  live_e2e_tests.rs  llm_markers.rs  llm_runtime.rs  main.rs  queue_policy.rs  queue_telemetry.rs  router.rs  scheduler.rs  session.rs  skills.rs  tasks.rs  terminal_bridge.rs  terminal_lite.rs  testing.rs  token_alerts.rs  traits.rs  triggers.rs  types.rs  updater.rs  utils.rs  wizard.rs
src/agent/: consultant_analysis.rs  consultant_prompt_tests.rs  file_path_extraction_tests.rs  graceful.rs  heartbeat_tests.rs  history.rs  intent_gate.rs  intent_routing.rs  intent_tests.rs  llm.rs  loop_utils.rs  main_loop.rs  message_ordering_tests.rs  mod.rs  models.rs  policy_signal_tests.rs  policy_signals.rs  post_task.rs  response_analysis.rs  response_analysis_tests.rs  resume.rs  spawn.rs  system_prompt.rs  tests.rs  tool_exec.rs  tool_watchdog_tests.rs  v3_intent_tests.rs
src/agent/consultant/: consultant_analysis.rs  consultant_pass.rs  consultant_prompt_tests.rs
src/agent/intent/: intent_gate.rs  intent_routing.rs  intent_tests.rs
src/agent/loop/: bootstrap_phase.rs  characterization_tests.rs  compaction.rs  completion_phase.rs  consultant_completion_phase.rs  consultant_decision_phase.rs  consultant_direct_return.rs  consultant_fallthrough.rs  consultant_intent_gate_phase.rs  consultant_orchestration_phase.rs  consultant_phase.rs  direct_return.rs  evidence_state.rs  execution_state.rs  fallthrough.rs  llm_phase.rs  loop_utils.rs  main_loop.rs  message_build_phase.rs  message_ordering_tests.rs  orchestration_phase.rs  response_phase.rs  sliding_window.rs  stopping_conditions.rs  stopping_phase.rs  system_directives.rs  tool_execution_phase.rs  tool_loop_state.rs  tool_prelude_phase.rs  tool_result_notices.rs  validation_state.rs
src/agent/loop/bootstrap/: phase_impl.rs  run.rs  shortcuts.rs  task_planning.rs  types.rs
src/agent/loop/consultant_orchestration/: memory_scope.rs  phase_impl.rs  routes.rs  run.rs  types.rs
src/agent/loop/orchestration/: phase_impl.rs  (+5 more)
src/agent/policy/: policy_signal_tests.rs  policy_signals.rs  recall_guardrails.rs  tool_scoping_tests.rs
src/agent/runtime/: dialogue_state.rs  goal_delivery_tests.rs  goal_failure_tests.rs  graceful.rs  group_session_tests.rs  history.rs  llm.rs  models.rs  post_task.rs  resume.rs  resume_checkpoint_tests.rs  spawn.rs  system_prompt.rs
src/agent/tools/: tool_defs.rs  tool_exec.rs  tool_watchdog_tests.rs
src/channels/: commands.rs  connect.rs  discord.rs  formatting.rs  hub.rs  mod.rs  slack.rs  telegram.rs
src/db/: migrations.rs  mod.rs
src/events/: consolidation.rs  context.rs  conversation_turn.rs  mod.rs  payloads.rs  store.rs
src/health/: alerts.rs  mod.rs  probes.rs  store.rs  trends.rs
src/integration_tests/: part_00.rs  part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs  part_07.rs  part_08.rs  part_09.rs  part_10.rs  part_11.rs  part_12_delegation.rs  part_13_dialogue_state.rs  scheduler_flaw.rs
src/mcp/: client.rs  mod.rs  registry.rs
src/memory/: binary.rs  comprehensive_tests.rs  context_window.rs  embeddings.rs  expertise.rs  manager.rs  math.rs  mod.rs  people_intelligence.rs  proactive.rs  procedures.rs  retention.rs  scoring.rs  skill_promotion.rs  task_learning.rs  tests.rs
src/oauth/: mod.rs  providers.rs
src/plans/: detection.rs  generation.rs  mod.rs  recovery.rs  store.rs  tracking.rs
src/providers/: anthropic_native.rs  error.rs  google_genai.rs  mod.rs  openai_compatible.rs  xai_native.rs
src/skills/: mod.rs  resources.rs
src/startup/: channels.rs  db_security.rs  mcp.rs  memory_pipeline.rs  mod.rs  provider_router.rs  skills.rs  stores.rs  tools.rs
src/state/: mod.rs  sqlite.rs
src/state/sqlite/: conversation_summary.rs  dialogue_state.rs  dynamic_bots.rs  dynamic_cli_agents.rs  dynamic_mcp.rs  episodes.rs  facts.rs  goals.rs  health_checks.rs  learning.rs  legacy_goals.rs  messages.rs  migrations.rs  mod.rs  notifications.rs  oauth.rs  people.rs  session_channels.rs  settings.rs  skills.rs  tests.rs  token_usage.rs  v3.rs
src/tools/: browser.rs  channel_history.rs  check_environment.rs  cli_agent.rs  command_patterns.rs  command_risk.rs  command_semantics.rs  config_manager.rs  daemon_guard.rs  diagnose.rs  edit_file.rs  fs_utils.rs  git_commit.rs  git_info.rs  goal_trace.rs  health_probe.rs  http_request.rs  manage_api.rs  manage_cli_agents.rs  manage_goal_tasks.rs  manage_http_auth.rs  manage_mcp.rs  manage_memories.rs  manage_oauth.rs  manage_people.rs  manage_skills.rs  memory.rs  mod.rs  plan_manager.rs  policy_metrics.rs  process_control.rs  project_inspect.rs  read_file.rs  remote.rs  report_blocker.rs  run_command.rs  sanitize.rs  scheduled_goal_runs.rs  scheduled_goals.rs  scheduler.rs  (+17 more)
src/traits/: channels.rs  conversation.rs  dialogue.rs  dynamic.rs  goals.rs  memory.rs  people.rs  provider.rs  state_store.rs  tools.rs  trigger_event.rs  v3.rs
tests/: cli_smoke.rs
tests/common/: mod.rs
(+10 files in other folders)
