[package]
name = "aidaemon"
version = "0.1.0"
edition = "2021"
description = "A personal AI agent that runs as a background daemon, accessible via Telegram, with tool use, MCP integration, email triggers, and persistent memory"
license = "MIT"
repository = "https://github.com/davo20019/aidaemon"
homepage = "https://aidaemon.ai/"
documentation = "https://docs.aidaemon.ai/"
readme = "README.md"
keywords = ["ai", "daemon", "telegram", "llm", "mcp"]
categories = ["command-line-utilities"]
exclude = ["*.db", "*.db-shm", "*.db-wal", ".env", "config.toml"]

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.17", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-imap = "0.10"
async-native-tls = "0.5"
async-std = { version = "1", features = ["attributes"] }
futures = "0.3"
axum = "0.8"
dialoguer = "0.11"
chromiumoxide = { version = "0.8", features = ["tokio-runtime"], default-features = false, optional = true }
shellexpand = "3"
dirs = "6"
fastembed = "4"
tokio-util = "0.7.18"

[features]
browser = ["dep:chromiumoxide"]
